<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Explorer Technologies</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="compose">Compose</string>
    <string name="group">Group</string>
    <string name="autoreply">Auto Reply</string>
    <string name="level">Level</string>
    <string name="sender_name">Sender name</string>
    <string name="to">To</string>
    <string name="fullname">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="sender_id">Sender Id</string>
    <string name="contacts">Contacts</string>
    <string name="counter">Counter</string>
    <string name="groups">Groups</string>
    <string name="call_log">Call Log</string>
    <string name="unknown">Unknown</string>
    <string name="add_new">+ New</string>
    <string name="new_reply">New Auto Reply</string>
    <string name="update_reply">Update Auto Reply</string>
    <string name="delete_all">Delete All</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="schedule">Schedule</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="done">Done</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="select_all">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="link">http://www.xwireless.net</string>

    <string name="keyword">Keyword</string>
    <string-array name="level_array">
        <item>National</item>
        <item>International</item>
    </string-array>

    <string name="title_activity_layouts">Layouts</string>
    <string name="title_activity_smsdialog">SMSDialog</string>

</resources>