<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout style="@style/TitleBar">
        <TextView
            style="@style/TitleBarText"
            android:text="@string/login" />
        
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#ffffff" />

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_height="match_parent" 
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center"  >
        
        <EditText 
            android:id="@+id/textbox_username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:inputType="text"          
            />
        <EditText 
            android:id="@+id/textbox_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textbox_username"
            android:hint="@string/password"
            android:inputType="textPassword"          
            />
        
        <EditText 
            android:id="@+id/textbox_sender"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textbox_password"
            android:hint="@string/sender_id"
            android:inputType="text"/>
        
        <Button android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:onClick="loginUser"
            android:layout_below="@+id/textbox_sender"/>
        
        
        <Button android:id="@+id/btn_forgot_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/btn_login"
            android:text="@string/forgot_password"
            android:layout_below="@+id/textbox_sender"/>

        
    </RelativeLayout>
</RelativeLayout>
