<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#98000000"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#ffffff"
        android:paddingBottom="15dp" >

        <LinearLayout style="@style/TitleBar" >

            <ImageView
                android:id="@+id/image_title"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/update_reply"
                android:src="@drawable/autoreply" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/TitleBarText"
                android:text="@string/update_reply" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fadingEdge="none"
            android:fillViewport="true" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/txt_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:hint="@string/to"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_to"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/textarea_bordered"
                    android:gravity="top|left"
                    android:hint="@string/message"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:padding="8dp"
                    android:scrollbars="vertical"
                    android:singleLine="false" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_message"
                    android:layout_centerHorizontal="true"
                    android:onClick="sendMessage"
                    android:text="@string/update" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>