<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#98000000"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="5dp"
        android:background="#ffffff" >

        <LinearLayout style="@style/TitleBar" >

            <ImageView
                android:id="@+id/image_title"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/update_reply"
                android:src="@drawable/compose" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/TitleBarText"
                android:text="@string/contacts"
                android:textColor="#ffffff" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutSearchBox"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="40dp" 
            android:gravity="center">

            <EditText
                android:id="@+id/contactSearchBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnSearch"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/contacts" >

                <requestFocus />
            </EditText>
            <Button android:layout_height="wrap_content"
                android:id="@+id/btnSearch"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:text="Go"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/contact_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutSearchBox"
            android:layout_marginBottom="45dp"
            android:clickable="true"
            android:divider="@color/Grey"
            android:dividerHeight="1dp"
            android:longClickable="true"
            tools:listitem="@layout/contact_item" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/btn_contact_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btn_contact_select_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_all" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>