<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#98000000"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="5dp"
        
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/layout_title"
            style="@style/dialog_header" >

            <ImageView
                android:id="@+id/image_title"
                style="@style/dialog_header_image"
                android:contentDescription="@string/update_reply"
                android:src="@drawable/compose" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/dialog_header_title"
                android:layout_toRightOf="@+id/image_title" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="130dp"
            
            android:layout_below="@+id/layout_title"
            >

            <TextView
                android:id="@+id/txt_message"
                android:lines="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_message" >

            <Button
                android:id="@+id/btn_reply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reply" />

            <Button
                android:id="@+id/btn_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forward" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>